Most of the PCB routing is done, but in need of lots of tidy-ups once finalised.  Removed some components to simplify the layout, including replacing the bulky pot with a Delta Sigma DAC for the LCD contrast (and associated breadboarding code to prove viability).

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /**/.~*
 /src/schematics/~*.sch
 /src/schematics/~*.pcb
+/src/schematics/*.net
 /src/schematics/Cluck2Sesame (*.txt
 /src/schematics/Plots
 /src/schematics/Reports
+/src/firmware-tests
