PCB layout completed and packaged for manufacture by PCB Train.

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@
 /src/schematics/Cluck2Sesame (*.txt
 /src/schematics/Plots
 /src/schematics/Reports
+/src/schematics/pcbtrain/Cluck2Sesame
 /src/firmware-tests
