Started to convert from MPLABX to gputils as it provides better automation / scripting.  Added the beginnings of the testing infrastructure.

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,9 @@
 /src/schematics/Plots
 /src/schematics/Reports
 /src/schematics/pcbtrain/Cluck2Sesame
-/src/firmware-tests
+*.lst
+*.map
+*.cod
+*.cof
+*.hex
+*.o
