Added test for MCLR initialisation.  Refined function call spying mechanism and the test runner script.

--- a/src/firmware-tests/Main/Reset/Makefile
+++ b/src/firmware-tests/Main/Reset/Makefile
@@ -1,12 +1,13 @@
 HEX_FILES=\
 	PowerOnResetTest.hex \
-	BrownOutResetTest.hex
+	BrownOutResetTest.hex \
+	MclrResetTest.hex
 
 SUT_OBJ_FILE=$(FIRMWARE_DIR)/Main.o
 OBJ_FILES=\
 	$(SUT_OBJ_FILE) \
 	$(FIRMWARE_CORE_OBJ_FILES) \
-	$(TEST_FIXTURE_OBJ_FILE) \
+	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
 	InitialisationSpies.o
 
@@ -20,5 +21,8 @@ PowerOnResetTest.hex: $(OBJ_FILES) PowerOnResetTest.o
 
 BrownOutResetTest.hex: $(OBJ_FILES) BrownOutResetTest.o
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) BrownOutResetTest.o
+
+MclrResetTest.hex: $(OBJ_FILES) MclrResetTest.o
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) MclrResetTest.o
 
 include $(MAKEFILE_RULES)
