--- a/src/firmware-tests/PowerOnReset/Pcon/Makefile
+++ b/src/firmware-tests/PowerOnReset/Pcon/Makefile
@@ -1,12 +1,19 @@
 HEX_FILES=\
 	BorPorBitsSetTest.hex \
-	NonBorPorBitsUnmodifiedTest.hex
+	BorDisabledTest.hex \
+	UlpwuDisabledTest.hex
 
 BOR_POR_BITS_SET_OBJ_FILES=\
-	BorPorBitsSetTest.o
+	BorPorBitsSetTest.o \
+	$(FIRMWARE_TESTS_DIR)/InitialiseAfterResetDummy.o
 
-NON_BOR_POR_BITS_UNMODIFIED_OBJ_FILES=\
-	NonBorPorBitsUnmodifiedTest.o
+BOR_DISABLED_OBJ_FILES=\
+	BorDisabledTest.o \
+	$(FIRMWARE_TESTS_DIR)/InitialiseAfterResetDummy.o
+
+ULPWU_DISABLED_OBJ_FILES=\
+	UlpwuDisabledTest.o \
+	$(FIRMWARE_TESTS_DIR)/InitialiseAfterResetDummy.o
 
 all: $(HEX_FILES)
 
@@ -16,7 +23,10 @@ clean:
 BorPorBitsSetTest.hex: $(OBJ_FILES) $(BOR_POR_BITS_SET_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(BOR_POR_BITS_SET_OBJ_FILES)
 
-NonBorPorBitsUnmodifiedTest.hex: $(OBJ_FILES) $(NON_BOR_POR_BITS_UNMODIFIED_OBJ_FILES)
-	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(NON_BOR_POR_BITS_UNMODIFIED_OBJ_FILES)
+BorDisabledTest.hex: $(OBJ_FILES) $(BOR_DISABLED_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(BOR_DISABLED_OBJ_FILES)
+
+UlpwuDisabledTest.hex: $(OBJ_FILES) $(ULPWU_DISABLED_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ULPWU_DISABLED_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
