--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 
 before_install:
-  - sudo apt-get install popt-devel
+  - sudo apt-get install popt
   - sudo apt-get install flex
   - sudo apt-get install bison
   - sudo ./install-gputils.sh
