Started to add some clock increment tests but realised gpsim stimuli are very limited / unflexible (dependent upon cycle counts, periodic / aperiodic but not a specific count of pulses for example).  These tests will be revisited once some 32-bit arithmetic routines are in place, allowing the tests to be written in assembly without much gpsim scripting.

--- a/src/firmware-tests/Clock/Initialisation/Makefile
+++ b/src/firmware-tests/Clock/Initialisation/Makefile
@@ -1,3 +1,5 @@
+OBJ_FILES+=$(ASSERT_NO_ISR_OBJ_FILE)
+
 HEX_FILES=\
 	Timer1SourceIsExternalCrystalTest.hex \
 	Timer1DrivesExternalCrystalTest.hex \
