--- a/src/firmware-tests/Clock/Makefile
+++ b/src/firmware-tests/Clock/Makefile
@@ -2,14 +2,16 @@ export SUT_OBJ_FILE=$(FIRMWARE_DIR)/Clock.o
 export OBJ_FILES=\
 	$(SUT_OBJ_FILE) \
 	$(FIRMWARE_CORE_OBJ_FILES) \
-	$(TEST_FIXTURE_OBJ_FILES) \
-	$(ASSERT_NO_ISR_OBJ_FILE)
+	$(TEST_FIXTURE_OBJ_FILES)
 
 all:
 	$(MAKE) -C Initialisation all
+	# TODO: TIMEKEEPING NEEDS DOING PROPERLY - GPSIM STIMULI ARE NAFF...
+	# $(MAKE) -C TimeKeeping all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Initialisation clean
+	$(MAKE) -C TimeKeeping clean
 
 include $(MAKEFILE_RULES)
