Added a load of include files for the modules (cleaner 'extern' handling).  Started to add the Clock module tests / code.  Fixed a bug with Arithmetic32 (incfsz does not affect the Z flag).

--- a/src/firmware-tests/Clock/Makefile
+++ b/src/firmware-tests/Clock/Makefile
@@ -6,8 +6,7 @@ export OBJ_FILES=\
 
 all:
 	$(MAKE) -C Initialisation all
-	# TODO: TIMEKEEPING NEEDS DOING PROPERLY - GPSIM STIMULI ARE NAFF...
-	# $(MAKE) -C TimeKeeping all
+	$(MAKE) -C TimeKeeping all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
