Started work on clockUpdate() to handle TIMER1 overflows for timekeeping.

--- a/src/firmware-tests/Clock/Initialisation/Makefile
+++ b/src/firmware-tests/Clock/Initialisation/Makefile
@@ -6,7 +6,8 @@ HEX_FILES=\
 	Timer1PrescalerTest.hex \
 	Timer1AsyncTest.hex \
 	Timer1EnabledTest.hex \
-	Timer1NotGatedTest.hex
+	Timer1NotGatedTest.hex \
+	ClockFlagsClearedTest.hex
 
 TIMER1_SOURCE_IS_EXTERNAL_CRYSTAL_OBJ_FILES=\
 	Timer1SourceIsExternalCrystalTest.o
@@ -25,6 +26,9 @@ TIMER1_ENABLED_OBJ_FILES=\
 
 TIMER1_NOT_GATED_OBJ_FILES=\
 	Timer1NotGatedTest.o
+
+CLOCK_FLAGS_CLEARED_OBJ_FILES=\
+	ClockFlagsClearedTest.o
 
 all: $(HEX_FILES)
 
@@ -48,5 +52,8 @@ Timer1EnabledTest.hex: $(OBJ_FILES) $(TIMER1_ENABLED_OBJ_FILES)
 
 Timer1NotGatedTest.hex: $(OBJ_FILES) $(TIMER1_NOT_GATED_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(TIMER1_NOT_GATED_OBJ_FILES)
+
+ClockFlagsClearedTest.hex: $(OBJ_FILES) $(CLOCK_FLAGS_CLEARED_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(CLOCK_FLAGS_CLEARED_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
