--- a/src/firmware-tests/Clock/TimeKeeping/Makefile
+++ b/src/firmware-tests/Clock/TimeKeeping/Makefile
@@ -3,10 +3,14 @@ OBJ_FILES+=\
 	$(FIRMWARE_DIR)/Arithmetic32.o
 
 HEX_FILES=\
-	Timer1OverflowIncrementsTimeTest.hex
+	Timer1OverflowIncrementsTimeTest.hex \
+	IsrDoesNotIncrementTimeTest.hex
 
 TIMER1_OVERFLOW_INCREMENTS_TIME_OBJ_FILES=\
 	Timer1OverflowIncrementsTimeTest.o
+
+ISR_DOES_NOT_INCREMENT_TIME_OBJ_FILES=\
+	IsrDoesNotIncrementTimeTest.o
 
 all: $(HEX_FILES)
 
@@ -15,5 +19,8 @@ clean:
 
 Timer1OverflowIncrementsTimeTest.hex: $(OBJ_FILES) $(TIMER1_OVERFLOW_INCREMENTS_TIME_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(TIMER1_OVERFLOW_INCREMENTS_TIME_OBJ_FILES)
+
+IsrDoesNotIncrementTimeTest.hex: $(OBJ_FILES) $(ISR_DOES_NOT_INCREMENT_TIME_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ISR_DOES_NOT_INCREMENT_TIME_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
