--- a/src/firmware-tests/Clock/Makefile
+++ b/src/firmware-tests/Clock/Makefile
@@ -7,10 +7,12 @@ export OBJ_FILES=\
 all:
 	$(MAKE) -C Initialisation all
 	$(MAKE) -C TimeKeeping all
+	$(MAKE) -C Update all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Initialisation clean
 	$(MAKE) -C TimeKeeping clean
+	$(MAKE) -C Update clean
 
 include $(MAKEFILE_RULES)
