--- a/src/firmware-tests/Makefile
+++ b/src/firmware-tests/Makefile
@@ -19,6 +19,7 @@ all: TestFixture.o TestDoubles.o AssertNoIsr.o InitialiseAfterResetMock.o Initia
 	$(MAKE) -C InitialisationChain all
 	$(MAKE) -C Clock all
 	$(MAKE) -C Arithmetic32 all
+	$(MAKE) -C ArithmeticBcd all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
@@ -29,5 +30,6 @@ clean:
 	$(MAKE) -C InitialisationChain clean
 	$(MAKE) -C Clock clean
 	$(MAKE) -C Arithmetic32 clean
+	$(MAKE) -C ArithmeticBcd clean
 
 include $(MAKEFILE_RULES)
