--- a/src/firmware-tests/InitialisationChain/Makefile
+++ b/src/firmware-tests/InitialisationChain/Makefile
@@ -3,6 +3,7 @@ OBJ_FILES=\
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
 	$(FIRMWARE_DIR)/Clock.o \
+	$(FIRMWARE_DIR)/ArithmeticBcd.o \
 	FirstInitialisationInChainTest.o
 
 HEX_FILES=FirstInitialisationInChainTest.hex
