--- a/src/firmware-tests/InitialisationChain/Makefile
+++ b/src/firmware-tests/InitialisationChain/Makefile
@@ -2,7 +2,7 @@ OBJ_FILES=\
 	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
-	$(FIRMWARE_DIR)/Clock.o \
+	$(FIRMWARE_DIR)/Clock.a \
 	$(FIRMWARE_DIR)/ArithmeticBcd.o \
 	FirstInitialisationInChainTest.o
 
