--- a/src/firmware-tests/Smps/Makefile
+++ b/src/firmware-tests/Smps/Makefile
@@ -1,12 +1,12 @@
-export SUT_OBJ_FILE=$(FIRMWARE_DIR)/Motor.a
+export SUT_OBJ_FILE=$(FIRMWARE_DIR)/Smps.a
 export OBJ_FILES=\
 	$(SUT_OBJ_FILE) \
 	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
-	$(CURDIR)/InitialiseAfterMotorMock.o
+	$(CURDIR)/InitialiseAfterSmpsMock.o
 
-all: InitialiseAfterMotorMock.o
+all: InitialiseAfterSmpsMock.o
 	$(MAKE) -C Initialisation all
 	$(MAKE) -C EnableDisable all
 
