The enableShiftRegister() and disableShiftRegister() functions now call enableMotorVdd() and disableMotorVdd(), respectively.

--- a/src/firmware-tests/ShiftRegister/Initialisation/Makefile
+++ b/src/firmware-tests/ShiftRegister/Initialisation/Makefile
@@ -4,13 +4,16 @@ HEX_FILES=\
 	InitialisationChainTest.hex
 
 ANSEL_OBJ_FILES=\
-	AnselTest.o
+	AnselTest.o \
+	../EnableDisableMotorVddMocks.o
 
 PORTC_OBJ_FILES=\
-	PortcTest.o
+	PortcTest.o \
+	../EnableDisableMotorVddMocks.o
 
 INITIALISATION_CHAIN_OBJ_FILES=\
-	InitialisationChainTest.o
+	InitialisationChainTest.o \
+	../EnableDisableMotorVddMocks.o
 
 all: $(HEX_FILES)
 
