--- a/src/firmware-tests/InitialisationChain/Makefile
+++ b/src/firmware-tests/InitialisationChain/Makefile
@@ -1,13 +1,13 @@
+HEX_FILES=FirstInitialisationInChainTest.hex
+
 OBJ_FILES=\
 	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
-	$(FIRMWARE_DIR)/Clock.a \
-	$(FIRMWARE_DIR)/Arithmetic4.o \
-	$(FIRMWARE_DIR)/ArithmeticBcd.a \
-	FirstInitialisationInChainTest.o
-
-HEX_FILES=FirstInitialisationInChainTest.hex
+	$(FIRMWARE_OBJ_FILE) \
+	FirstInitialisationInChainTest.o \
+	InitialiseAfterFirstInChainDummy.o \
+	$(FIRMWARE_DIR)/Clock.a
 
 all: $(HEX_FILES)
 
