--- a/src/firmware-tests/Smps/Makefile
+++ b/src/firmware-tests/Smps/Makefile
@@ -4,15 +4,18 @@ export OBJ_FILES=\
 	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
-	$(CURDIR)/InitialiseAfterSmpsMock.o
+	$(CURDIR)/InitialiseAfterSmpsMock.o \
+	$(CURDIR)/PollAfterSmpsMock.o
 
-all: InitialiseAfterSmpsMock.o
+all: InitialiseAfterSmpsMock.o PollAfterSmpsMock.o
 	$(MAKE) -C Initialisation all
 	$(MAKE) -C EnableDisable all
+	$(MAKE) -C Poll all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Initialisation clean
 	$(MAKE) -C EnableDisable clean
+	$(MAKE) -C Poll clean
 
 include $(MAKEFILE_RULES)
