Added a Timer0 module and a simple way of determining an elapsed number of ticks.

--- a/src/firmware-tests/Makefile
+++ b/src/firmware-tests/Makefile
@@ -17,6 +17,7 @@ all: TestFixture.o TestDoubles.o AssertNoIsr.o InitialiseAfterResetMock.o Initia
 	$(MAKE) -C BrownOutReset all
 	$(MAKE) -C MclrReset all
 	$(MAKE) -C InitialisationChain all
+	$(MAKE) -C Timer0 all
 	$(MAKE) -C Clock all
 	$(MAKE) -C Arithmetic4 all
 	$(MAKE) -C Arithmetic32 all
@@ -32,6 +33,7 @@ clean:
 	$(MAKE) -C BrownOutReset clean
 	$(MAKE) -C MclrReset clean
 	$(MAKE) -C InitialisationChain clean
+	$(MAKE) -C Timer0 clean
 	$(MAKE) -C Clock clean
 	$(MAKE) -C Arithmetic4 clean
 	$(MAKE) -C Arithmetic32 clean
