Added isSmpsEnabled() and isMotorVddEnabled().

--- a/src/firmware-tests/Motor/EnableDisable/Makefile
+++ b/src/firmware-tests/Motor/EnableDisable/Makefile
@@ -1,25 +1,30 @@
 HEX_FILES=\
 	EnableDisableMotorVddTest.hex \
 	EnableDisableSmpsTest.hex \
-	EnableDisableSmpsOrderTest.hex
+	EnableDisableSmpsOrderTest.hex \
+	IsEnabledTest.hex
+
+TEST_DOUBLE_OBJ_FILES=\
+	../EnableDisableSmpsMocks.o \
+	../IsSmpsEnabledStub.o \
+	../PollSmpsDummy.o \
+	../PollAfterMotorMock.o
 
 ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES=\
-	EnableDisableMotorVddTest.o \
-	../EnableDisableSmpsMocks.o \
-	../PollSmpsDummy.o \
-	../PollAfterMotorMock.o
+	$(TEST_DOUBLE_OBJ_FILES) \
+	EnableDisableMotorVddTest.o
 
 ENABLE_DISABLE_SMPS_OBJ_FILES=\
-	EnableDisableSmpsTest.o \
-	../EnableDisableSmpsMocks.o \
-	../PollSmpsDummy.o \
-	../PollAfterMotorMock.o
+	$(TEST_DOUBLE_OBJ_FILES) \
+	EnableDisableSmpsTest.o
 
 ENABLE_DISABLE_SMPS_ORDER_OBJ_FILES=\
-	EnableDisableSmpsOrderTest.o \
-	../EnableDisableSmpsMocks.o \
-	../PollSmpsDummy.o \
-	../PollAfterMotorMock.o
+	$(TEST_DOUBLE_OBJ_FILES) \
+	EnableDisableSmpsOrderTest.o
+
+IS_ENABLED_OBJ_FILES=\
+	$(TEST_DOUBLE_OBJ_FILES) \
+	IsEnabledTest.o
 
 all: $(HEX_FILES)
 
@@ -34,5 +39,8 @@ EnableDisableSmpsTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_OBJ_FILES)
 
 EnableDisableSmpsOrderTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_ORDER_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_ORDER_OBJ_FILES)
+
+IsEnabledTest.hex: $(OBJ_FILES) $(IS_ENABLED_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(IS_ENABLED_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
