Added SMPS enable / disable tests using pull-ups to verify RMW behaviour.

--- a/src/firmware-tests/Smps/EnableDisable/Makefile
+++ b/src/firmware-tests/Smps/EnableDisable/Makefile
@@ -1,9 +1,13 @@
 HEX_FILES=\
 	EnableDisableSmpsTest.hex \
+	EnableDisableSmpsRmwTest.hex \
 	IsEnabledAfterInitialisationTest.hex
 
 ENABLE_DISABLE_SMPS_OBJ_FILES=\
 	EnableDisableSmpsTest.o
+
+ENABLE_DISABLE_SMPS_RMW_OBJ_FILES=\
+	EnableDisableSmpsRmwTest.o
 
 IS_ENABLED_AFTER_INITIALISATION_OBJ_FILES=\
 	IsEnabledAfterInitialisationTest.o
@@ -15,6 +19,9 @@ clean:
 
 EnableDisableSmpsTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_OBJ_FILES)
+
+EnableDisableSmpsRmwTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_RMW_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_RMW_OBJ_FILES)
 
 IsEnabledAfterInitialisationTest.hex: $(OBJ_FILES) $(IS_ENABLED_AFTER_INITIALISATION_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(IS_ENABLED_AFTER_INITIALISATION_OBJ_FILES)
