Added motor VDD enable / disable tests using pull-ups to verify RMW behaviour.

--- a/src/firmware-tests/Motor/EnableDisable/Makefile
+++ b/src/firmware-tests/Motor/EnableDisable/Makefile
@@ -1,5 +1,6 @@
 HEX_FILES=\
 	EnableDisableMotorVddTest.hex \
+	EnableDisableMotorVddRmwTest.hex \
 	EnableDisableSmpsTest.hex \
 	EnableDisableSmpsOrderTest.hex \
 	IsEnabledTest.hex
@@ -13,6 +14,10 @@ TEST_DOUBLE_OBJ_FILES=\
 ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES=\
 	$(TEST_DOUBLE_OBJ_FILES) \
 	EnableDisableMotorVddTest.o
+
+ENABLE_DISABLE_MOTOR_VDD_RMW_OBJ_FILES=\
+	$(TEST_DOUBLE_OBJ_FILES) \
+	EnableDisableMotorVddRmwTest.o
 
 ENABLE_DISABLE_SMPS_OBJ_FILES=\
 	$(TEST_DOUBLE_OBJ_FILES) \
@@ -33,6 +38,9 @@ clean:
 
 EnableDisableMotorVddTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES)
+
+EnableDisableMotorVddRmwTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_MOTOR_VDD_RMW_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_MOTOR_VDD_RMW_OBJ_FILES)
 
 EnableDisableSmpsTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_OBJ_FILES)
