--- a/src/firmware-tests/ShiftRegister/Makefile
+++ b/src/firmware-tests/ShiftRegister/Makefile
@@ -7,7 +7,7 @@ export OBJ_FILES=\
 	$(CURDIR)/InitialiseAfterShiftRegisterMock.o \
 	$(CURDIR)/PollMotorMock.o
 
-all: InitialiseAfterShiftRegisterMock.o EnableDisableMotorVddMocks.o PollMotorMock.o
+all: InitialiseAfterShiftRegisterMock.o EnableDisableMotorVddMocks.o EnableDisableMotorVddStubs.o PollMotorMock.o
 	$(MAKE) -C Initialisation all
 	$(MAKE) -C EnableDisable all
 	$(MAKE) -C ShiftOut all
