The enableShiftRegister() and disableShiftRegister() functions now zero the pins to prevent driving them when the shift register's VDD is off.

--- a/src/firmware-tests/ShiftRegister/EnableDisable/Makefile
+++ b/src/firmware-tests/ShiftRegister/EnableDisable/Makefile
@@ -1,9 +1,14 @@
 HEX_FILES=\
-	EnableDisableMotorVddTest.hex
+	EnableDisableMotorVddTest.hex \
+	EnableDisablePortTest.hex
 
 ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES=\
 	EnableDisableMotorVddTest.o \
 	../EnableDisableMotorVddMocks.o
+
+ENABLE_DISABLE_PORT_OBJ_FILES=\
+	EnableDisablePortTest.o \
+	../EnableDisableMotorVddStubs.o
 
 all: $(HEX_FILES)
 
@@ -12,5 +17,8 @@ clean:
 
 EnableDisableMotorVddTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES)
+
+EnableDisablePortTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_PORT_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_PORT_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
