--- a/src/firmware/Lcd/Makefile
+++ b/src/firmware/Lcd/Makefile
@@ -1,7 +1,23 @@
 LIB_FILENAME=../Lcd.a
 OBJ_FILES=\
 	Initialise.o \
-	EnableDisable.o
+	EnableDisable.o \
+	Poll.o \
+	DisabledState.o \
+	EnableWaitForShiftRegisterState.o \
+	EnableWaitForMoreThan40msState.o \
+	EnableTrySetByteMode1State.o \
+	EnableWaitForMoreThan4_1msState.o \
+	EnableTrySetByteMode2State.o \
+	EnableWaitForMoreThan100usState.o \
+	EnableSetByteModeState.o \
+	EnableSetNibbleModeState.o \
+	EnableSetDisplayState.o \
+	EnableDisplayOffState.o \
+	EnableDisplayClearState.o \
+	EnableEntryModeState.o \
+	EnableSetContrastState.o \
+	IdleState.o
 
 all: $(LIB_FILENAME)
 
